<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="520dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@color/RedS1"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="309dp"
        android:layout_height="343dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:circularflow_defaultRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.274">

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="Date"
            android:paddingLeft="15dp"
            android:textColor="@color/RedS1"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="Time"
            android:paddingLeft="15dp"
            android:textColor="@color/RedS1"
            android:textSize="30dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="Diastolic Pressure"
            android:inputType="numberDecimal"
            android:paddingLeft="15dp"
            android:textColor="@color/RedS1"
            android:textSize="30dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/sp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="Systolic Pressure"
            android:inputType="numberDecimal"
            android:paddingLeft="15dp"
            android:textColor="@color/RedS1"
            android:textSize="30dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/hr"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="Heart Rate"
            android:inputType="numberDecimal"
            android:paddingLeft="15dp"
            android:textColor="@color/RedS1"
            android:textSize="30dp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="169dp"
        android:layout_height="52dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.428">

        <android.widget.Button
            android:id="@+id/button_insert"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/button_border_w"
            android:text="Insert"
            android:textColor="@color/RedS1"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="299dp"
        android:layout_height="55dp"
        android:layout_margin="5dp"
        android:background="@drawable/text_border_w"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="27dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />


</androidx.constraintlayout.widget.ConstraintLayout>