...
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:foregroundGravity="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="10dp"
...
            android:src="@drawable/ic_baseline_menu_24"
            android:paddingLeft="5dp"
            app:tint="#FFFFFF" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/RedS1"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
...
